--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <hr>
     
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="./assets/images/movie-ranking.png" style="height: 250px; width: auto;"/>
-    <br>
+    <img src="./assets/images/movie-ranking.png" style="height: 200px; width: auto;" alt="movie ranking project preview"/>
 
     <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/birthday-invite.png" style="height: 250px; width: auto;"/>
+    <img src="./assets/images/birthday-invite.png" style="height: 200px; width: auto;" alt="birthday invite project preview"/>
     <hr>
     
     <h4>
